--- a/US 2023 Civil Flights, delays, meteo and aircrafts/US_Info.html
+++ b/US 2023 Civil Flights, delays, meteo and aircrafts/US_Info.html
@@ -807,7 +807,7 @@
                             <tr><td>Delay_Carrier</td><td>Delay time attributed to carrier issues.</td><td>10</td></tr>
                             <tr><td>Delay_Weather</td><td>Delay time attributed to weather issues.</td><td>5</td></tr>
                             <tr><td>Delay_NAS</td><td>Delay time attributed to National Airspace System.</td><td>3</td></tr>
-                            <tr><td>Delay_Security</td><td>Delay time attributed to security issues.</td><td>2</td></tr>
+                            <tr><td>Delay_Security</td><td>Delay time attributed to security issues.</td><td>2D</td></tr>
                             <tr><td>Delay_LastAircraft</td><td>Delay time attributed to issues with the previous aircraft.</td><td>8</td></tr>
                         </tbody>
                     </table>
@@ -860,7 +860,7 @@
             <div class="data-links">
                 <a href="https://raw.githubusercontent.com/RudraX-Github/Visualization-Power-BI-/main/US%202023%20Civil%20Flights%2C%20delays%2C%20meteo%20and%20aircrafts/Data%20files/Flights_Dataset.csv" class="data-link" download>Flights_Dataset.csv</a>
                 <a href="https://raw.githubusercontent.com/RudraX-Github/Visualization-Power-BI-/main/US%202023%20Civil%20Flights%2C%20delays%2C%20meteo%20and%20aircrafts/Data%20files/Cancelled_Diverted_2023.csv" class="data-link" download>Cancelled_Diverted_2023.csv</a>
-                <a href="https://raw.githubusercontent.com/RudraX-Github/Visualization-Power-BI-/main/US%202023%20Civil%20Flights%2C%20delays%2C%20meteo%20and%20aircrafts/Data%20files/weather_meteo_by_airport.csv" class="data-link" download>weather_meteo_by_airport.csv</a>
+                <a href="httpsAa href="https://raw.githubusercontent.com/RudraX-Github/Visualization-Power-BI-/main/US%202023%20Civil%20Flights%2C%20delays%2C%20meteo%20and%20aircrafts/Data%20files/weather_meteo_by_airport.csv" class="data-link" download>weather_meteo_by_airport.csv</a>
                 <a href="https://raw.githubusercontent.com/RudraX-Github/Visualization-Power-BI-/main/US%202023%20Civil%20Flights%2C%20delays%2C%20meteo%20and%20aircrafts/Data%20files/airports_geolocation.csv" class="data-link" download>airports_geolocation.csv</a>
             </div>
              <p class="data-source-note hidden">
