--- a/Madhav Ecommarce/Madhav_Info.html
+++ b/Madhav Ecommarce/Madhav_Info.html
@@ -455,10 +455,10 @@
 </head>
 <body>
 
-    <a href="https://raw.githack.com/RudraX-Github/Visualization-Power-BI-/main/US%202023%20Civil%20Flights%2C%20delays%2C%20meteo%20and%20aircrafts/Info.html" class="floating-link-btn" title="View US Flights Analysis">
-    	✈️
-    	<span class="tooltip-text">View US Flights Analysis</span>
-	</a>
+    <a href="https://raw.githack.com/RudraX-Github/Visualization-Power-BI-/main/US%202023%20Civil%20Flights%2C%20delays%2C%20meteo%20and%20aircrafts/US_Info.html" class="floating-link-btn" title="View US Flights Analysis">
+   ✈️
+    <span class="tooltip-text">View US Flights Analysis</span>
+    </a>
 
     <header>
         <h1>Madhav Ecommerce: Interactive Analysis</h1>
