--- a/Madhav Ecommarce/Madhav_Info.html
+++ b/Madhav Ecommarce/Madhav_Info.html
@@ -581,19 +581,18 @@
             <p>Download the interactive Power BI dashboard and the raw data files used for this analysis.</p>
             <div class="data-links">
                 <a href="https://github.com/RudraX-Github/Visualization-Power-BI-/raw/refs/heads/main/Madhav%20Ecommarce/Madhav%20Ecommerce%20Dashboard.pbix" class="data-link data-link-pbix" download>
-                    📊 Download Power BI Dashboard (.pbix)
+                    📊 Power BI Dashboard (.pbix)
                 </a>
                 
-                <a href="https://github.com/RudraX-Github/Visualization-Power-BI-/raw/main/Madhav%20Ecommarce/Data%20files/Orders.csv" class="data-link" download>
-                    📄 Download Orders.csv
+                <a href="https://raw.githack.com/RudraX-Github/Visualization-Power-BI-/main/Madhav%20Ecommarce/Data%20files/Orders.csv?download=true" class="data-link" download="Orders.csv">
+                    📄 Orders.csv
                 </a>
-                <a href="https://github.com/RudraX-Github/Visualization-Power-BI-/raw/main/Madhav%20Ecommarce/Data%20files/Details.csv" class="data-link" download>
-                    📄 Download Details.csv
+                <a href="https://raw.githack.com/RudraX-Github/Visualization-Power-BI-/main/Madhav%20Ecommarce/Data%20files/Details.csv?download=true" class="data-link" download="Details.csv">
+                    📄 Details.csv
                 </a>
             </div>
         </section>
-
-    </div>
+        </div>
 
     <footer>
         <p>&copy; 2025 Madhav Ecommerce. Interactive Analysis Report.</p>
