--- a/US 2023 Civil Flights, delays, meteo and aircrafts/US_Info.html
+++ b/US 2023 Civil Flights, delays, meteo and aircrafts/US_Info.html
@@ -805,7 +805,7 @@
                             <tr><td>Distance_type</td><td>Flight distance type (short, medium, long-haul).</td><td>Long-haul</td></tr>
                             <tr><td>Delay_Carrier</td><td>Delay time attributed to carrier issues.</td><td>10</td></tr>
                             <tr><td>Delay_Weather</td><td>Delay time attributed to weather issues.</td><td>5</td></tr>
-                            <tr><td>Delay_NAS</td><td>Delay time attributed to National Airspace System.</td><td>3</td></tr>
+                            <tr><td>Delay_NAS</td><td>Delay time attributed to National Airspace System.</td><td>3G</td></tr>
                             <tr><td>Delay_Security</td><td>Delay time attributed to security issues.</td><td>2D</td></tr>
                             <tr><td>Delay_LastAircraft</td><td>Delay time attributed to issues with the previous aircraft.</td><td>8</td></tr>
                         </tbody>
@@ -857,10 +857,10 @@
         <section id="downloads" class="hidden">
             <h2>Download My Data Sources</h2>
             <div class="data-links">
-                <a href="https://raw.githubusercontent.com/RudraX-Github/Visualization-Power-BI-/main/US%202023%20Civil%20Flights%2C%20delays%2C%20meteo%20and%20aircrafts/Data%20files/Flights_Dataset.csv" class="data-link" download>Flights_Dataset.csv</a>
-                <a href="https://raw.githubusercontent.com/RudraX-Github/Visualization-Power-BI-/main/US%202023%20Civil%20Flights%2C%20delays%2C%20meteo%20and%20aircrafts/Data%20files/Cancelled_Diverted_2023.csv" class="data-link" download>Cancelled_Diverted_2023.csv</a>
-                <a href="httpsAa href="https://raw.githubusercontent.com/RudraX-Github/Visualization-Power-BI-/main/US%202023%20Civil%20Flights%2C%20delays%2C%20meteo%20and%20aircrafts/Data%20files/weather_meteo_by_airport.csv" class="data-link" download>weather_meteo_by_airport.csv</a>
-                <a href="https://raw.githubusercontent.com/RudraX-Github/Visualization-Power-BI-/main/US%202023%20Civil%20Flights%2C%20delays%2C%20meteo%20and%20aircrafts/Data%20files/airports_geolocation.csv" class="data-link" download>airports_geolocation.csv</a>
+                <a href="https://raw.githack.com/RudraX-Github/Visualization-Power-BI-/main/US%202023%20Civil%20Flights%2C%20delays%2C%20meteo%20and%20aircrafts/Data%20files/Flights_Dataset.csv" class="data-link" download="Flights_Dataset.csv">Flights_Dataset.csv</a>
+                <a href="https://raw.githack.com/RudraX-Github/Visualization-Power-BI-/main/US%202023%20Civil%20Flights%2C%20delays%2C%20meteo%20and%20aircrafts/Data%20files/Cancelled_Diverted_2023.csv" class="data-link" download="Cancelled_Diverted_2023.csv">Cancelled_Diverted_2023.csv</a>
+                <a href="https://raw.githack.com/RudraX-Github/Visualization-Power-BI-/main/US%202023%20Civil%20Flights%2C%20delays%2C%20meteo%20and%20aircrafts/Data%20files/weather_meteo_by_airport.csv" class="data-link" download="weather_meteo_by_airport.csv">weather_meteo_by_airport.csv</a>
+                <a href="https://raw.githack.com/RudraX-Github/Visualization-Power-BI-/main/US%202023%20Civil%20Flights%2C%20delays%2C%20meteo%20and%20aircrafts/Data%20files/airports_geolocation.csv" class="data-link" download="airports_geolocation.csv">airports_geolocation.csv</a>
             </div>
              <p class="data-source-note hidden">
                 Note: The original dataset for this analysis was sourced from Kaggle:
@@ -869,8 +869,7 @@
                 </a>.
              </p>
         </section>
-
-    </div>
+        </div>
 
     <div id="imageModal" class="modal">
         <div class="modal-content">
